# pass3d

./: .editorconfig  .gitignore  Cargo.toml  README.md  generate_rock.js  miner.js  package.json  prettier.config.js
miner/: rock.js  rock_obj.js  sphere.js
p3d/: Cargo.toml
p3d/src/: algo_grid.rs  contour.rs  lib.rs  polyline.rs
src/: main.rs
