[package]
name = "pass3d"
version = "0.2.0"
authors = ["3Dpass"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"

p3d = { version="0.2.0", git = "https://github.com/3Dpass/p3d", branch = "test_main" }