[package]
name = "p3d"
version = "0.1.0"
authors = ["3Dpass"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cgmath = "0.16.1"
tri-mesh = "0.5.0"
rust-3d = "0.34.0"
obj-rs = "0.6"
rust-crypto = "0.2"

ndarray = { version = "0.13" }
peroxide = { version = "0.30" }
